--- a/staffpicks.html
+++ b/staffpicks.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Staff Picks – Burnline</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <style>
+<style>
   :root{
     --bg-1:#0f0f1c;
     --bg-2:#1b1e35;
@@ -26,7 +26,6 @@
     font-family: 'Orbitron', sans-serif;
   }
 
-  /* Header */
   .site-header {
     display: flex;
     justify-content: space-between;
@@ -93,15 +92,7 @@
     .site-nav.show { display: flex; }
     .site-nav a { color: var(--ink); padding: 0.5rem 0; }
   }
-@media (max-width: 768px) {
-  .modal.modal--book .modal-media img {
-    max-height: 50vh; /* half the screen height */
-    width: auto;      /* maintain aspect ratio */
-    height: auto;
-    display: block;
-    margin: 0 auto;   /* center horizontally */
-  }
-}
+
   .content {
     max-width: 1200px;
     margin: 2rem auto;
@@ -325,13 +316,25 @@
         "byline"
         "body";
     }
-    .modal.modal--book .modal-media { position: relative; }
+    .modal.modal--book .modal-media {
+      position: relative;     
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0.5rem 0;
+    }
     .modal.modal--book .modal-media img{
-      height: auto;
-      object-fit: cover;
+      max-width: 90%;          
+      max-height: 50vh;      
+      width: auto;            
+      height: auto;              
+      object-fit: contain;        
+      background: #111522;       
+      margin: 0 auto;
+      display: block;
     }
   }
-  </style>
+</style>
 </head>
 <body>
   <header class="site-header">
