--- a/staffpicks.html
+++ b/staffpicks.html
@@ -76,14 +76,18 @@
     width: 100%;
     border-radius: 2px;
   }
+
+  /* New gradient heading style */
   .gradient-heading {
-  font-size: 2.5rem; /* matches your other page headers */
-  font-family: 'Orbitron', sans-serif;
-  background: linear-gradient(90deg, var(--pink), #ff8bd1);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin-bottom: 1.5rem;
-}
+    font-size: 2.5rem;
+    font-family: 'Orbitron', sans-serif;
+    background: linear-gradient(90deg, var(--pink), #ff8bd1);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+
   @media (max-width: 768px) {
     .hamburger { display: flex; }
     .site-nav {
@@ -105,11 +109,6 @@
     max-width: 1200px;
     margin: 2rem auto;
     padding: 0 2rem;
-  }
-  .content h1 {
-    color: var(--pink);
-    text-align: center;
-    margin-bottom: 2rem;
   }
 
   .filters {
@@ -362,7 +361,7 @@
   </header>
 
   <section class="content">
-  <h1 class="gradient-heading">Staff Picks</h1>
+    <h1 class="gradient-heading">Staff Picks</h1>
     <div class="filters" role="tablist" aria-label="Filter Staff Picks">
       <!-- Books tab first -->
       <button class="filter-btn" data-filter="books" role="tab" aria-selected="false">Books</button>
