--- a/staffpicks.html
+++ b/staffpicks.html
@@ -95,11 +95,11 @@ h1, h2, h3, nav a, header {
 
 @media (max-width: 768px) {
   .modal.modal--book .modal-media img {
-    max-height: 50vh; /* half the screen height */
-    width: auto;      /* maintain aspect ratio */
+    max-height: 50vh; 
+    width: auto;     
     height: auto;
     display: block;
-    margin: 0 auto;   /* center horizontally */
+    margin: 0 auto;  
   }
 }
 
@@ -332,7 +332,6 @@ body.modal-open{
   }
 }
 
-/* Staff Picks header styling */
 .page-title {
   font-size: 2.5rem;
   font-weight: bold;
