--- a/submit.html
+++ b/submit.html
@@ -192,7 +192,7 @@
   <div id="fiction" style="text-align: left;">
 <h2 id="fiction" class="gradient-heading-blue" style="margin-top: 3rem;">Fiction Guidelines</h2>
     <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. In fiction, we're looking for what you'd expect; near-future worlds with corporate control, people altered by tech-implants, you get it. <strong>Above all however, we care about character.</strong> We want people who make us feel something while they're navigating whatever wild setting you’ve built. Human connection is what makes good cyberpunk work. If the content moves us, we’ll usually publish it.</p>
-    <p style="margin-top: -0.5rem;">We're less interested in anything outside of the cyberpunk subgenre for this magazing. If you're submitting, please make sure you'd classify your work as cyberpunk specifically.</p>
+    <p style="margin-top: -0.5rem;">We're less interested in anything outside of the cyberpunk subgenre for this magazine. If you're submitting, please make sure you'd classify your work as cyberpunk specifically.</p>
 
     <!-- Info Table -->
     <table style="width: 100%; border-collapse: collapse; margin-top: 2rem; max-width: 700px;">
